Comment out debug code so removing use of sun.misc.Base64Decoder